# ConsoleGameEngine

./: CMakeLists.txt  README.md  start.cpp
cge/: global.cpp  global.h  loader.cpp  test.cpp  test.h
cge/cycle/: cycle.cpp  cycle.h  listener.h  render.cpp  render.h
cge/io/: render.h  terminal.cpp  terminal.h
cge/map/: room.cpp  room.h
cge/object/: component.h  game_object.cpp  game_object.h
cge/object/components/: position.cpp  position.h  texture.cpp  texture.h
cge/system/: global.cpp  global.h  loader.cpp  render.cpp  render.h  terminal.cpp  test.cpp  test.h
object/: game_object.h
object/components/: position.cpp  texture.cpp  texture.h
system/: render.cpp  render.h  terminal.cpp  terminal.h
